tests/ui/fail_user_error_fill_delegate_for_impl_without_trait.stderr
error: expected `impl <Trait> for <Type>`
 --> tests/ui/fail_user_error_fill_delegate_for_impl_without_trait.rs:5:1
  |
5 | impl Hoge {}
  | ^^^^^^^^^^^^
